tests/bad/bad_arg_nbr.s
.name "coucou"
.comment "coucou"

label:
    live %1, r2
